# rag

./: README.md  pyproject.toml
docker/: .env.example  docker-compose.yml
notebook/: Ollama_on_Colab_with_ngrok.ipynb  run_ollama_server.ipynb
src/: .env.example  main.py
src/assets/: Rag.postman_collection.json
src/controllers/: BaseController.py  DataController.py  EmbedController.py  NLPController.py  ProcessController.py  ProjectController.py  __init__.py
src/helpers/: config.py
src/models/: AssetModel.py  ChunkModel.py  ProjectModel.py
src/models/db_schemes/: __init__.py  asset.py  data_chunk.py  project.py
src/models/db_schemes/rag/: README.md
src/models/db_schemes/rag/alembic/versions/: 8cc2bc801aa7_initial_version.py
src/models/db_schemes/rag/schemes/: __init__.py  asset.py  datachunk.py  project.py  rag_base.py
src/models/enums/: DataBaseEnum.py
src/routes/: data.py  nlp.py
src/routes/schemes/: data.py  nlp.py  rag.code-workspace
src/stores/llm/: LLMEnums.py  LLMInterface.py  LLMProviderFactory.py
src/stores/llm/providers/: CoHereProvider.py  OpenAIProvider.py
src/stores/llm/templates/: template_parser.py
src/stores/vectordb/: VectorDBEnums.py  VectorDBInterface.py  VectorDBProviderFactory.py
src/stores/vectordb/providers/: QdrantDBProvider.py
